--- a/02. PARTIE REGLEMENTAIRE/Article D1431-1 - 28996807.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-1 - 28996807.md
@@ -14,22 +14,25 @@ l'autre des modes ferroviaire ou guidé, routier, fluvial, maritime ou aérien ;
 la personne ou la marchandise est transportée par le même moyen de transport ; 
 
 5° " Source d'énergie " : carburant, électricité ou tout autre vecteur d'énergie utilisé pour le fonctionnement d'un moyen de
-transport.
+transport ; 
+
+6° “ Gaz à effet de serre ” : les gaz à effet de serre mentionnés à l'article R. 229-45 du code de l'environnement. L'unité
+de compte des émissions s'exprime en dioxyde de carbone équivalent ou CO2e. 
+
+Sont comptabilisées les fuites de gaz frigorigènes selon la méthode de calcul fixée par un arrêté du ministre chargé des
+transports.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 1 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. D1431-2 (V)
+	  - Code de l'environnement - art. R229-45
+	  - Code des transports - art. D1431-2 (VD)
