--- a/02. PARTIE REGLEMENTAIRE/Article D1431-20 - 28996851.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-20 - 28996851.md
@@ -1,8 +1,8 @@
 # Article D1431-20
 
-L'information fournie au bénéficiaire est la quantité de dioxyde de carbone, exprimée en masse, correspondant à l'ensemble
-des phases amont et de fonctionnement. La fourniture d'une information distinguant les quantités de dioxyde de carbone émises
-lors de la phase amont et lors de la phase de fonctionnement est facultative. 
+L'information fournie au bénéficiaire est la quantité de  gaz à effet de serre, exprimée en masse, correspondant à l'ensemble
+des phases amont et de fonctionnement. La fourniture d'une information distinguant les quantités de  gaz à effet de serre
+émises lors de la phase amont et lors de la phase de fonctionnement est facultative. 
 
 Lorsque la méthode mise en œuvre par le prestataire utilise une source d'énergie dont le facteur d'émission n'est pas prévu
 par l'arrêté ministériel mentionné à l'article D. 1431-7, ou des références différentes de celles qui sont indiquées à
@@ -12,23 +12,19 @@ Méthode spécifique " est portée à la connaissance du bénéficiaire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 11 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 7
 
 	**Cite**:
 
-	  - Code des transports - art. D1431-11 (V)
-	  - Code des transports - art. D1431-7 (V)
+	  - Code des transports - art. D1431-11
 
 	**Cité par**:
 
 	  - Code des transports - art. D1431-14 (V)
+	  - Code des transports - art. D1431-7 (VD)
