--- a/02. PARTIE REGLEMENTAIRE/Article D1431-22 - 28996855.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-22 - 28996855.md
@@ -5,24 +5,20 @@ permettant d'expliciter la méthode de calcul qu'il met en œuvre ainsi que les 
 
 Lorsque cette information n'est pas mise à disposition, le bénéficiaire dispose d'un délai d'un mois à compter de la
 réception de l'information mentionnée à l'article D. 1431-21 pour formuler au prestataire une éventuelle demande portant sur
-la méthode de calcul des émissions de dioxyde de carbone mise en œuvre par le prestataire ainsi que sur les sources d'énergie
-utilisées. Le prestataire communique les informations nécessaires dans un délai de deux mois à compter de la réception de la
-demande.
+la méthode de calcul des émissions de  gaz à effet de serre mise en œuvre par le prestataire ainsi que sur les sources
+d'énergie utilisées. Le prestataire communique les informations nécessaires dans un délai de deux mois à compter de la
+réception de la demande.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 13 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 7
 
 	**Cite**:
 
-	  - Code des transports - art. D1431-21 (V)
+	  - Code des transports - art. D1431-21 (VD)
