--- a/02. PARTIE REGLEMENTAIRE/Article D1431-3 - 28996813.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-3 - 28996813.md
@@ -1,23 +1,19 @@
 # Article D1431-3
 
-L'information mentionnée à l'article L. 1431-3 porte sur la quantité de dioxyde de carbone émise pour un ensemble comprenant
-la phase de fonctionnement des moyens de transport et la phase amont de production des sources d'énergie nécessaires au
-fonctionnement des moyens de transport.
+L'information mentionnée à l'article L. 1431-3 porte sur la quantité de  gaz à effet de serre émise pour un ensemble
+comprenant la phase de fonctionnement des moyens de transport et la phase amont de production des sources d'énergie
+nécessaires au fonctionnement des moyens de transport.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 3, alinéa 1, paragraphe I (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 7
 
 	**Cite**:
 
-	  - Code des transports - art. L1431-3 (V)
+	  - Code des transports - art. L1431-3
