--- a/02. PARTIE REGLEMENTAIRE/Article D1431-4 - 28996815.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-4 - 28996815.md
@@ -2,7 +2,7 @@
 
 La phase de fonctionnement comprend toutes les opérations de transport entre l'origine et la destination de la prestation de
 transport, ainsi que les émissions lors des trajets de repositionnement, des trajets effectués à vide et les émissions à
-l'arrêt, moteur en marche, qui sont liées à ces opérations.
+l'arrêt, qui sont liées à ces opérations.
 
 Ne sont pas prises en compte les émissions liées à des opérations annexes au transport telles que les opérations de
 manutention des marchandises ou d'assistance de courte durée aux moyens de transport, assurées par des dispositifs externes
@@ -11,14 +11,10 @@ infrastructures.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 3, alinéas 2 et 3, paragraphe II (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 4
