--- a/02. PARTIE REGLEMENTAIRE/Article D1431-6 - 28996821.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-6 - 28996821.md
@@ -1,19 +1,15 @@
 # Article D1431-6
 
-Pour élaborer l'information relative à la quantité de dioxyde de carbone d'une prestation de transport, le prestataire
-identifie les différents segments afférents à la prestation de transport, évalue la quantité de dioxyde de carbone pour
+Pour élaborer l'information relative à la quantité de  gaz à effet de serre d'une prestation de transport, le prestataire
+identifie les différents segments afférents à la prestation de transport, évalue la quantité de  gaz à effet de serre pour
 chaque segment et additionne les valeurs ainsi obtenues.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 4 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 7
