--- a/02. PARTIE REGLEMENTAIRE/Article D1431-16 - 28996841.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-16 - 28996841.md
@@ -4,28 +4,24 @@ La possibilité d'utiliser les valeurs de niveau 1 mentionnées à l'article D. 
 
 1° Au prestataire qui emploie moins de cinquante salariés ; 
 
-2° Au prestataire qui emploie cinquante salariés et plus, jusqu'au 1er juillet 2016 ; 
+2° Au prestataire qui emploie cinquante salariés et plus, jusqu'au  1er juillet 2019 ; 
 
 3° A tout prestataire dans les cas prévus aux articles D. 1431-17 et D. 1431-18.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 8, alinéas 9 à 12, paragraphe V (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 6
 
 	**Cite**:
 
-	  - Code des transports - art. D1431-12 (V)
-	  - Code des transports - art. D1431-17 (V)
+	  - Code des transports - art. D1431-12
+	  - Code des transports - art. D1431-17
 
 	**Cité par**:
 
