--- a/02. PARTIE REGLEMENTAIRE/Article D1431-2 - 28996811.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-2 - 28996811.md
@@ -2,28 +2,24 @@
 
 Est soumise aux dispositions de l'article L. 1431-3 toute personne publique ou privée qui organise ou commercialise une
 prestation de transport de personnes, de marchandises ou de déménagement effectuée par un ou plusieurs moyens de transport,
-ayant son point d'origine ou de destination situé sur le territoire national, à l'exception des prestations qu'elle organise
-pour son propre compte.
+ayant ses points d'origine et de destination situés sur le territoire national, à l'exception des prestations qu'elle
+organise pour son propre compte.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 3
 
 	**Cité par**:
 
-	  - Code des transports - art. D1431-1 (V)
+	  - Code des transports - art. D1431-1 (VD)
 	  - Code des transports - art. D1431-23 (V)
 
 	**Cite**:
 
-	  - Code des transports - art. L1431-3 (V)
+	  - Code des transports - art. L1431-3
