--- a/02. PARTIE REGLEMENTAIRE/Article D1431-7 - 28996823.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1431-7 - 28996823.md
@@ -1,12 +1,13 @@
 # Article D1431-7
 
-Pour évaluer la quantité de dioxyde de carbone pour un segment, le prestataire détermine la quantité de source d'énergie
+Pour évaluer la quantité de  gaz à effet de serre pour un segment, le prestataire détermine la quantité de source d'énergie
 consommée pour la prestation dans la phase de fonctionnement, en attribuant une part au bénéficiaire de la prestation en cas
 de pluralité de bénéficiaires, et la multiplie par le facteur d'émission de la source d'énergie considérée. 
 
 Les facteurs d'émission opèrent, pour chaque source d'énergie, la conversion d'une quantité de source d'énergie en émissions
-de dioxyde de carbone relatives à un ensemble comprenant la phase de fonctionnement et la phase amont. Les valeurs des
-facteurs d'émission sont fixées par arrêté du ministre chargé des transports. 
+de  gaz à effet de serre relatives à un ensemble comprenant la phase de fonctionnement et la phase amont. Les valeurs des
+facteurs d'émission sont fixées par arrêté du ministre chargé des transports. Ces valeurs respectent les principes de calcul
+déterminés par le “ pôle de la coordination nationale ” mentionné à l'article R. 229-49 du code de l'environnement. 
 
 Le prestataire qui utilise une source d'énergie dont le facteur d'émission n'est pas prévu par l'arrêté susmentionné justifie
 la valeur particulière du facteur d'émission qu'il retient. Il porte alors à la connaissance du bénéficiaire le caractère
@@ -14,18 +15,16 @@ spécifique du calcul conformément aux dispositions de l'article D. 1431-20.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2011-1336 du 24 octobre 2011 - art. 5 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-639 du 26 avril 2017 - art. 5
+	  - Décret n°2017-639 du 26 avril 2017 - art. 7
 
-	**Cité par**:
+	**Cite**:
 
+	  - Code de l'environnement - art. R229-49
 	  - Code des transports - art. D1431-20 (VD)
